[tool.poetry]
name = "pie-launch-node"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
starlette = "^0.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
